--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -2923,6 +2923,9 @@ $gold: #dba514;
   display: flex;
   flex-direction: row;
   justify-content: center;
+  background-color: black;
+  width: 50%;
+  border: none;
 }
 .contain {
   display: flex;
@@ -2980,4 +2983,14 @@ $gold: #dba514;
     flex-direction: row;
     justify-content: center;
   }
+}
+.buttons {
+  padding: 1.7% 16.3%;
+  background-color: black;
+  color: white;
+  font-size: 24px;
+  line-height: 29.6px;
+  cursor: pointer;
+  border-radius: "50px";
+  border: none;
 }
