--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -2926,9 +2926,12 @@ width: 100% !important;
 .submit_btn_container {
   display: flex;
   flex-direction: row;
+  cursor: pointer;
   justify-content: center;
   background-color: black;
+  border-radius: 50px;
   width: 50%;
+  margin: 0 auto;
   border: none;
 }
 .contain {
@@ -2992,6 +2995,9 @@ width: 100% !important;
   padding: 1.7% 16.3%;
   background-color: black;
   color: white;
+  width: 50%;
+  margin: 0 auto;
+  border-radius: 50px;
   font-size: 24px;
   line-height: 29.6px;
   cursor: pointer;
