--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -3004,3 +3004,10 @@ width: 100% !important;
   border-radius: "50px";
   border: none;
 }
+.center{
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 5%;
+}
