--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -10,7 +10,9 @@ $gold: #dba514;
   // max-width: 90%;
   margin: 0 auto;
 }
-
+.cursor{
+  cursor:pointer;
+}
 /* // HEADER CSS */
 
 .header {
@@ -18,6 +20,7 @@ $gold: #dba514;
     position: relative;
     width: 125px;
     height: 95px;
+    cursor:pointer;
   }
   margin: 40px auto;
   width: 90%;
@@ -29,6 +32,7 @@ $gold: #dba514;
   li {
     list-style-type: none;
     font-size: 18px;
+    cursor:pointer;
   }
   ul {
     display: flex;
@@ -41,6 +45,7 @@ $gold: #dba514;
       padding: 14px 23px 14px 22px;
       color: $white;
       border-radius: 40px;
+      cursor:pointer;
     }
   }
 }
@@ -2367,30 +2372,59 @@ width: 100% !important;
     width: 167px !important;
   }
   .form {
+    .form_desc{
+      margin-top: 30px;
+      flex-direction: column !important;
+    }
     .row {
       display: flex;
       width: 117px !important;
       gap: 0px;
       flex-direction: column;
     }
+    .hr2{
+      margin: 12px 0px 20px 0px !important;
+    }
+    .form_title{
+      font-size: 18px !important;
+      line-height: 21px !important;
+    }
+    .clear{
+      svg{
+        width: 20px;
+        height: 20px;
+      }
+     p {
+      font-size: 12px !important; width: 70px !important;line-height: 32px !important;}
+    
+    }
+    .labels{
+      font-size: 12px !important;
+    }
     input {
       border: none;
       outline: none;
       font-family: "Montserrat";
-      padding: 8px 40px 8px 20px;
-      font-size: 8px;
+      padding: 8px 20px 8px 10px !important;
+      font-size: 14px !important;
       font-weight: 500;
-      width: 117px !important;
+      // width: 117px !important;
       line-height: 9.75px;
       border-radius: 5px;
-      margin-bottom: 12px;
+      height: 58px !important;
+      margin-bottom: 12px !important;
+    }
+    .upload{
+      padding: 14px 31px 10px 50px !important;
+
     }
     .message {
       width: 117px !important;
       height: 94px !important;
-      padding: 8px 40px 8px 20px;
       word-wrap: break-word;
       word-break: break-all;
+      padding: 14px 31px 10px 50px !important;
+
       border: none;
       outline: none;
       font-family: "Montserrat";
@@ -2399,6 +2433,10 @@ width: 100% !important;
       font-weight: 500;
       line-height: 9.75px;
       margin-bottom: 12px;
+    }
+    .buttons{
+      font-size: 16px !important;
+      margin-top: 20px!important;
     }
   }
   .formtbtn {
