--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -198,8 +198,16 @@ $gold: #dba514;
       flex-direction: column;
     }
     .center {
+      
+    display: flex;
+    align-items: baseline;
       position: relative;
       width: 516px;
+      .circle{
+        width:576px;
+        height:576px;
+        position: relative;
+      }
       height: 516px;
       .mobile {
         position: absolute;
@@ -527,7 +535,7 @@ $gold: #dba514;
   width: 100%;
   background-color: $base-color;
   position: relative;
-  margin: 130px 0px 140px 0px;
+  margin: 200px 0px 140px 0px;
   padding: 0px 18px;
 
   .waves {
@@ -611,11 +619,22 @@ $gold: #dba514;
 }
 
 // FOOTER
+.seprator {
+  border-top: 1px solid #ffd400;
+  width: 100%;
+  margin-top: 50px;
+  // max-width: 1920px;
+ }
 .footer {
   width: 100%;
   display: flex;
   margin: 114px 0px 0px 0px;
   flex-direction: column;
+  .seprator {
+    border-top: 1px solid #ffd400;
+    width: 100%;
+    max-width: 1920px;
+   }
   .b1 {
     display: flex;
     flex-direction: column;
@@ -726,8 +745,8 @@ $gold: #dba514;
   display: flex;
 }
 .bottom_footer {
-  border-top: 1px solid $base-color;
-  margin: 50px 0px 0px 0px;
+  // border-top: 1px solid $base-color;
+  // margin: 50px 0px 0px 0px;
   p {
     font-size: 20px;
     font-weight: 400;
@@ -836,6 +855,11 @@ $gold: #dba514;
     height: 366px !important;
     // margin: 0px 0px 190px 0px;
     min-width: 305px;
+  }
+  .circle{
+    width:305px !important;
+    height:305px !important;
+    position: relative;
   }
   .mobile {
     left: 25px !important;
@@ -962,10 +986,10 @@ $gold: #dba514;
       position: relative;
 
       .picture {
-        max-width: 215px !important;
-        width: 215px !important;
+        max-width: 215px  !important;
+        width: 215px  !important;
         position: relative;
-        height: 240px !important;
+        height: 240px ;
       }
       .yc {
         width: 55px !important;
@@ -980,7 +1004,7 @@ $gold: #dba514;
         border-radius: 444444px;
       }
       .cn {
-        font-size: 22px !important;
+        font-size: 22px ;
         line-height: 14.38px;
         color: $gold;
         padding-bottom: 8px;
@@ -999,10 +1023,10 @@ $gold: #dba514;
     }
   }
   .picture {
-    max-width: 225px !important;
-    width: 225px !important;
+    max-width: 225px ;
+    width: 225px ;
     position: relative;
-    height: 225px !important;
+    height: 225px ;
   }
   .yc {
     width: 61px;
@@ -1168,12 +1192,16 @@ $gold: #dba514;
     display: flex;
   }
   .bottom_footer {
-    border-top: 1px solid $base-color;
-    margin: 50px 0px 0px 0px;
+    // border-top: 1px solid $base-color;
+    width: 100%;
+
+    margin: 0px 0px 10px 0px;
     p {font-size: 20px;
       font-weight: 400;
       line-height: 24.38px;
       max-width: 90%;
+      width:100%;
+      margin: 0px;
       padding: 10px 0px 0px 0px;
       margin: 0 auto;
     }
@@ -1185,20 +1213,20 @@ $gold: #dba514;
 //
 @media only screen and (max-width: 1300px) {
   .picture {
-    max-width: 230px !important;
-    width: 230px !important;
+    max-width: 230px ;
+    width: 230px ;
     position: relative;
-    height: 230px !important;
+    height: 230px ;
   }
   // .row_container{
  
   // }
 }
-@media only screen and (max-width: 1098px) {
-  .cover {
-    margin: 0px 0px 0px 0px !important;
-  }
-}
+// @media only screen and (max-width: 1098px) {
+//   .cover {
+//     margin: 0px 0px 0px 0px !important;
+//   }
+// }
 
 //
 //
@@ -1213,26 +1241,26 @@ width: 100% !important;
     margin: 20px auto !important;
   }
   .header li {
-    font-size: 18px !important;
+    font-size: 16px !important;
   }
   .hlogo {
-    width: 95px !important;
-    height: 55px !important;
+    width: 85px !important;
+    height: 50px !important;
   }
   ul .btn {
-    padding: 10px 15px 10px 15px !important;
+    padding: 7px 10px 7px 10px !important;
   }
   //Banner
   .b {
-    height: 645px !important;
-    max-height: 645px !important;
+    height: 621px !important;
+    max-height: 621px !important;
   }
   .black {
-    height: 645px !important;
-    max-height: 645px !important;
+    height: 621px !important;
+    max-height: 621px !important;
   }
   .banner {
-    max-height: 540px;
+    max-height: 530px !important ;
     .bl {
       width: 50%;
 
@@ -1254,11 +1282,11 @@ width: 100% !important;
   .cover {
     bottom: 0 !important;
     position: relative;
-    margin: 0px 0px 15px 0px;
+    margin: 168px 0px 15px 0px;
   }
   .br {
-    width: 410px;
-    height: 520px;
+    width: 320px;
+    height: 380px;
     // margin: 65px 0px 0px 0px;
   }
   // CONTENT
@@ -1275,14 +1303,19 @@ width: 100% !important;
     }
   }
   .layout .center {
-    width: 316px !important;
-    height: 316px !important;
+    width: 275px !important;
+    height: 275px !important;
     margin: 0px 0px 115px 0px;
   }
+  .circle{
+    width: 275px !important;
+    height:275px !important;
+    position: relative;
+  }
   .mobile {
-    left: -5px !important;
+    left: 15px !important;
     top: -20px !important;
-    width: 330px !important;
+    width: 270px !important;
   }
   // .box .detail {
   //   width: 240px;
@@ -1316,12 +1349,12 @@ width: 100% !important;
   .wrwbg {
     h2 {
       text-align: center;
-      font-size: 24px;
+      font-size: 22px;
       font-weight: 600;
       line-height: 50px;
       padding: 115px 0px 115px 0px;
       margin: 0px auto;
-      width: 82%;
+      width: 70%;
     }
   }
   .detail {
@@ -1338,10 +1371,20 @@ width: 100% !important;
   .portfolio {
     padding: 40px 0px 105px 0px;
     .pleft {
-      width: 696px;
-      height: 585px;
+      width: 508px;
+      height: 435px;
     }
     .pright {
+      button {
+        background-color: #ffd400;
+        color: #ffffff;
+        padding: 6px 14px 8px 11px;
+        font-size: 18px;
+        line-height: 24.26px;
+        border: none;
+        width: 120px;
+        border-radius: 40px;
+    }
       padding: 50px 0px 0px 0px;
       h4 {
         font-size: 28px;
@@ -1349,8 +1392,8 @@ width: 100% !important;
         padding-bottom: 20px;
       }
       p {
-        font-size: 18px;
-        line-height: 38px;
+        font-size: 16px;
+        line-height: 28px;
       }
       h3 {
         padding: 12px 0px 19px 0px;
@@ -1554,7 +1597,7 @@ width: 100% !important;
   .bottom_footer {
     p {
       font-size: 14px;
-
+      margin: 0px;
       line-height: 24.38px;
       padding: 10px 0px 0px 0px;
     }
@@ -1563,11 +1606,11 @@ width: 100% !important;
 //
 //
 //
-@media only screen and (max-width: 1100px) {
-  .br {
-    height: 505px !important;
-  }
-}
+// @media only screen and (max-width: 1100px) {
+//   .br {
+//     height: 505px !important;
+//   }
+// }
 
 //
 //
@@ -1576,7 +1619,7 @@ width: 100% !important;
 @media only screen and (max-width: 1030px) {
   .br {
     width: 371px !important;
-    height: 506px !important;
+    height: 322px !important;
   }
   .cover {
     bottom: 32px !important ;
@@ -1592,9 +1635,9 @@ width: 100% !important;
   }
 }
 @media only screen and (max-width: 1027px) {
-  .br {
-    height: 464px !important;
-  }
+  // .br {
+  //   height: 464px !important;
+  // }
   .cover {
     bottom: 40px !important;
   }
@@ -2424,7 +2467,7 @@ width: 100% !important;
           border-radius: 444444px;
         }
         .cn {
-          font-size: 12px !important;
+          font-size: 12px ;
           line-height: 14.38px;
           color: $gold;
           padding-bottom: 8px;
@@ -2515,7 +2558,7 @@ width: 100% !important;
       flex-direction: column;
       input{
         width: 100% !important;
-        
+        font-size: 8px !important;
         height: 23px !important;
         background: #ffd400 !important;
         border: 1px solid #000000 !important;
@@ -2566,8 +2609,7 @@ width: 100% !important;
       height: 94px !important;
       word-wrap: break-word;
       word-break: break-all;
-      padding: 14px 31px 10px 50px !important;
-
+      padding: 9px 20px 10px 10px !important;
       border: none;
       outline: none;
       font-family: "Montserrat";
@@ -2599,6 +2641,11 @@ width: 100% !important;
   .footer {
     width: 100%;
     display: flex;
+    .seprator {
+      border-top: 1px solid #ffd400;
+      width: 100%;
+      max-width: 1920px;
+     }
     margin: 0px 0px 0px 0px;
     flex-direction: column;
     .b1 {
@@ -2693,8 +2740,9 @@ width: 100% !important;
   }
   .seprator {
     margin-top: 24px;
-    border-top: 1px solid black;
-  }
+    border-top: 1px solid #ffd400;
+    width: 100%;
+   }
   .bottom_footer {
     border-top: none;
     margin: 0px 0px 0px 0px;
@@ -3152,6 +3200,8 @@ display: none;
   }
 }
 
+
+
 .c_card {
   display: flex;
   background-color: #ffd400;
@@ -3231,9 +3281,13 @@ display: none;
 }
 
 .career_row {
+  flex-wrap: wrap;
   display: flex;
   gap: 30px;
-  margin: 100px 0px;
+  justify-content: center;
+  max-width: 80%;
+  margin: 100px auto;
+  width: 100%;
 }
 .cardb {
   position: absolute;
@@ -3539,13 +3593,13 @@ display: none;
     }
     .cayh {
       font-family: Montserrat;
-      font-size: 22px;
+      font-size: 22px !important;
       font-weight: 600;
       line-height: 45px;
     }
     .cabh {
       font-family: Montserrat;
-      font-size: 28px;
+      font-size: 24px;
       font-weight: 500;
       margin: 24px 0px 0px 0px;
       line-height: 34px;
@@ -3781,8 +3835,7 @@ display: none;
     width: 50%;
     margin: 0 auto;
     border: none;
-    p{
-      
+    p{    
     padding: 0.7% 14.3% !important;
     background-color: black;
     color: white;
