--- a/styles/overrides.css
+++ b/styles/overrides.css
@@ -8,6 +8,19 @@
     height: 290px !important;
   }
 }
+@media only screen and (max-width: 850px) {
+  .arrow {
+    margin: auto 24px !important;
+    width: 25px !important;
+    padding: 0 !important;
+  }
+  .carousel .slide {
+    height: 390px !important;
+  }
+}
+.carousel-status{
+  display: none;
+}
 /* @media only screen and (max-width: 1550px) {
   .carousel .slide {
     height: 95%!important;
