randox page completed

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1199,7 +1199,7 @@ $gold: #dba514;
     p {font-size: 20px;
       font-weight: 400;
       line-height: 24.38px;
-      max-width: 90%;
+      max-width: 100%;
       width:100%;
       margin: 0px;
       padding: 10px 0px 0px 0px;
@@ -4973,6 +4973,7 @@ display: none;
   }}}
   //////
   /// randox box
+  /// 
   .randoxc{
    width: 100%;
    height: 940px;
@@ -5040,7 +5041,8 @@ display: none;
     justify-content: space-between;
     top: 0;
     right: 0;
-   }
+   }  
+   ///// responsiveness 
    @media only screen and (max-width: 1600px) {
     .randoxc{
       width: 100%;
@@ -5219,4 +5221,317 @@ display: none;
        top: 0;
        right: 0;
       }
+  }
+  /////////////
+  /// Randox Page 
+
+  .randox_wrapper{
+    max-width: 1920px;
+    position: relative;
+    width: 95%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    margin-top: 64px;
+    .sectionr{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      margin-bottom: 140px;
+      .image{
+      width: 677px;
+      height: 665px;
+      position: relative; 
+      }
+      .ph{
+        font-family: 'Montserrat';
+        font-style: normal;
+        font-weight: 600;
+        font-size: 36px;
+        line-height: 44px;
+        padding-bottom: 24px;
+        color: #000000;
+      }
+      .content{
+        font-family: 'Montserrat';
+        font-style: normal;
+        margin: 0;
+        font-weight: 400;
+        font-size: 24px;
+        color: #665f5f;
+        line-height: 38px;
+        text-align: center;
+      }
+    }
+    .sectionr2{
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      max-width: 1525px;
+      margin: 0 auto;
+      gap: 36px;
+      margin-bottom: 160px;
+      .left{
+        width: 644px;
+height: 876px;
+position: relative;
+      }
+      .right{
+        display: flex;
+        flex-direction: column;
+        .ph{
+          font-family: 'Montserrat';
+          font-style: normal;
+          font-weight: 600;
+          font-size: 48px;
+          line-height: 50px;
+          padding-bottom: 24px;
+          color: #000000;
+        }
+        .content{
+          font-family: 'Montserrat';
+          font-style: normal;
+          margin: 0;
+          font-weight: 400;
+          color: #665f5f;
+          max-width: 845px;
+          font-size: 24px;
+          line-height: 38px;
+          margin-bottom: 21px;
+          text-align: initial;
+        }
+      }
+    }
+    .sectionr3{
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-direction: row-reverse;
+      max-width: 1525px;
+      margin: 0 auto;
+      gap: 36px;
+      .left{
+        width: 971.51px;
+height: 1450.95px;
+position: relative;
+      }
+      .right{
+        display: flex;
+        flex-direction: column; 
+        max-width: 626px;
+        .ph{
+          font-family: 'Montserrat';
+          font-style: normal;
+          font-weight: 600;
+          font-size: 48px;
+          line-height: 50px;
+          padding-bottom: 24px;
+          color: #000000;
+        }
+        .content{
+          font-family: 'Montserrat';
+          font-style: normal;
+          margin: 0;
+          font-weight: 400;
+         
+          font-size: 24px;
+          line-height: 38px;
+          color: #665f5f;
+          margin-bottom: 21px;
+          text-align: initial;
+        }
+        ul{
+          display: flex;
+          flex-direction: column;
+         li{
+          font-family: 'Montserrat';
+          font-style: normal;
+          font-weight: 400;
+          color: #665f5f;
+          font-size: 24px;
+          line-height: 40px;
+         }
+        }
+      }
+    }
+    .sectionr4{
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      position: relative;
+      max-width: 1525px;
+      margin: 0 auto;
+      margin-bottom: 36px;
+      gap: 36px;
+      .left{
+        width: 1467.56px;
+height: 1153px;
+position: relative;
+      }
+      .right{
+        display: flex;
+        position: absolute;
+        flex-direction: column; 
+        max-width: 721px;
+        bottom: 0;
+        right: -180px;
+        .ph{
+          font-family: 'Montserrat';
+          font-style: normal;
+          font-weight: 600;
+          font-size: 48px;
+          line-height: 50px;
+          padding-bottom: 42px;
+          color: #000000;
+        }
+        .content{
+          font-family: 'Montserrat';
+          font-style: normal;
+          margin: 0;
+          font-weight: 400;    
+          font-size: 24px;
+          line-height: 38px;
+          color: #665f5f;
+          margin-bottom: 21px;
+          text-align: initial;
+        }
+     
+      }
+    }
+    .sectionr5{
+      padding: 32px 0px 0px 0px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      max-width: 1525px;
+      margin: 0 auto;
+      .hr2{
+        font-family: 'Montserrat';
+        font-style: normal;
+        font-weight: 600;
+        font-size: 48px;
+        line-height: 59px;
+        text-align: center;
+        color: #000000;
+        margin-bottom: 52px;
+      }
+      .bani{
+        width: 1249px;
+        // margin: 0 auto;
+        margin-bottom: 77px;
+height: 806px;
+position: relative;
+      }
+      .ph{
+        font-family: 'Montserrat';
+        font-style: normal;
+        font-weight: 600;
+        font-size: 48px;
+        line-height: 50px;
+        padding-bottom: 24px;
+        color: #000000;
+      }
+      .content{
+        font-family: 'Montserrat';
+        font-style: normal;
+        margin: 0;
+        font-weight: 400;
+        color: #665f5f;
+        // max-width: 845px;
+        font-size: 24px;
+        line-height: 38px;
+        margin-bottom: 21px;
+        text-align: center;
+      }
+      .randox6{
+        width: 1195px;
+height: 932.16px;
+margin-top: 66px;
+position:relative;
+      }
+      .sectionr6{
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: center;
+        padding: 110px 0px 0px 0px;
+        align-items: center;
+        max-width: 1525px;
+        margin: 0 auto; 
+        .image{
+          width: 1027px;
+          height: 583px;
+          position: relative; 
+          }
+          .right{
+            max-width: 572px;
+          }
+          .ph{
+            font-family: 'Montserrat';
+            font-style: normal;
+            font-weight: 600;
+            font-size: 48px;
+            line-height: 50px;
+            padding-bottom: 24px;
+            color: #000000;
+          }
+          .content{
+            font-family: 'Montserrat';
+            font-style: normal;
+            margin: 0;
+            font-weight: 400;
+            font-size: 24px;
+            margin-bottom: 21px;
+            color: #665f5f;
+            line-height: 38px;
+            text-align: initial;
+          }
+      }
+      .sectionr7{
+        margin: 110px 0px 70px 0px;
+        .randox8{
+          width: 1532px;
+height: 638.6px;
+position: relative;
+        }
+      }
+      .sectionr8{
+        display: flex;
+        // flex-direction: row-reverse;
+        justify-content: center;
+        padding: 110px 0px 0px 0px;
+        align-items: flex-end;
+        max-width: 1525px;
+        margin: 0 auto; 
+        .image{
+          width: 730px;
+          height: 522px;
+          position: relative; 
+          }
+          .right{
+            max-width: 712px;
+          }
+          .ph{
+            font-family: 'Montserrat';
+            font-style: normal;
+            font-weight: 600;
+            font-size: 48px;
+            line-height: 50px;
+            padding-bottom: 24px;
+            color: #000000;
+          }
+          .content{
+            font-family: 'Montserrat';
+            font-style: normal;
+            margin: 0;
+            font-weight: 400;
+            font-size: 24px;
+            margin-bottom: 21px;
+            color: #665f5f;
+            line-height: 38px;
+            text-align: initial;
+          }
+      }
+    }
   }
