--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -36,7 +36,7 @@
 }
 .header ul .btn {
   background-color: #ffd400;
-  padding: 14px 23px 14px 22px;
+  padding: 8px 14px 8px 14px;
   color: #ffffff;
   border-radius: 40px;
   cursor: pointer;
@@ -1120,7 +1120,7 @@
     font-size: 20px;
     font-weight: 400;
     line-height: 24.38px;
-    max-width: 90%;
+    max-width: 100%;
     width: 100%;
     margin: 0px;
     padding: 10px 0px 0px 0px;
@@ -4767,6 +4767,15 @@
   border-radius: 50px;
 }
 
+.rights {
+  padding: 75px 0px 0px 0px;
+}
+
+.view {
+  background-color: #000000;
+  color: #ffffff;
+}
+
 .rightr {
   width: 100%;
   max-width: 720px;
@@ -4951,4 +4960,309 @@
     top: 0;
     right: 0;
   }
+}
+.randox_wrapper {
+  max-width: 1920px;
+  position: relative;
+  width: 95%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  margin-top: 64px;
+}
+.randox_wrapper .sectionr {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 140px;
+}
+.randox_wrapper .sectionr .image {
+  width: 677px;
+  height: 665px;
+  position: relative;
+}
+.randox_wrapper .sectionr .ph {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 36px;
+  line-height: 44px;
+  padding-bottom: 24px;
+  color: #000000;
+}
+.randox_wrapper .sectionr .content {
+  font-family: "Montserrat";
+  font-style: normal;
+  margin: 0;
+  font-weight: 400;
+  font-size: 24px;
+  color: #665f5f;
+  line-height: 38px;
+  text-align: center;
+}
+.randox_wrapper .sectionr2 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 1525px;
+  margin: 0 auto;
+  gap: 36px;
+  margin-bottom: 160px;
+}
+.randox_wrapper .sectionr2 .left {
+  width: 644px;
+  height: 876px;
+  position: relative;
+}
+.randox_wrapper .sectionr2 .right {
+  display: flex;
+  flex-direction: column;
+}
+.randox_wrapper .sectionr2 .right .ph {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 48px;
+  line-height: 50px;
+  padding-bottom: 24px;
+  color: #000000;
+}
+.randox_wrapper .sectionr2 .right .content {
+  font-family: "Montserrat";
+  font-style: normal;
+  margin: 0;
+  font-weight: 400;
+  color: #665f5f;
+  max-width: 845px;
+  font-size: 24px;
+  line-height: 38px;
+  margin-bottom: 21px;
+  text-align: initial;
+}
+.randox_wrapper .sectionr3 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row-reverse;
+  max-width: 1525px;
+  margin: 0 auto;
+  gap: 36px;
+}
+.randox_wrapper .sectionr3 .left {
+  width: 971.51px;
+  height: 1450.95px;
+  position: relative;
+}
+.randox_wrapper .sectionr3 .right {
+  display: flex;
+  flex-direction: column;
+  max-width: 626px;
+}
+.randox_wrapper .sectionr3 .right .ph {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 48px;
+  line-height: 50px;
+  padding-bottom: 24px;
+  color: #000000;
+}
+.randox_wrapper .sectionr3 .right .content {
+  font-family: "Montserrat";
+  font-style: normal;
+  margin: 0;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 38px;
+  color: #665f5f;
+  margin-bottom: 21px;
+  text-align: initial;
+}
+.randox_wrapper .sectionr3 .right ul {
+  display: flex;
+  flex-direction: column;
+}
+.randox_wrapper .sectionr3 .right ul li {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 400;
+  color: #665f5f;
+  font-size: 24px;
+  line-height: 40px;
+}
+.randox_wrapper .sectionr4 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+  max-width: 1525px;
+  margin: 0 auto;
+  margin-bottom: 36px;
+  gap: 36px;
+}
+.randox_wrapper .sectionr4 .left {
+  width: 1467.56px;
+  height: 1153px;
+  position: relative;
+}
+.randox_wrapper .sectionr4 .right {
+  display: flex;
+  position: absolute;
+  flex-direction: column;
+  max-width: 721px;
+  bottom: 0;
+  right: -180px;
+}
+.randox_wrapper .sectionr4 .right .ph {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 48px;
+  line-height: 50px;
+  padding-bottom: 42px;
+  color: #000000;
+}
+.randox_wrapper .sectionr4 .right .content {
+  font-family: "Montserrat";
+  font-style: normal;
+  margin: 0;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 38px;
+  color: #665f5f;
+  margin-bottom: 21px;
+  text-align: initial;
+}
+.randox_wrapper .sectionr5 {
+  padding: 32px 0px 0px 0px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  max-width: 1525px;
+  margin: 0 auto;
+}
+.randox_wrapper .sectionr5 .hr2 {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 48px;
+  line-height: 59px;
+  text-align: center;
+  color: #000000;
+  margin-bottom: 52px;
+}
+.randox_wrapper .sectionr5 .bani {
+  width: 1249px;
+  margin-bottom: 77px;
+  height: 806px;
+  position: relative;
+}
+.randox_wrapper .sectionr5 .ph {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 48px;
+  line-height: 50px;
+  padding-bottom: 24px;
+  color: #000000;
+}
+.randox_wrapper .sectionr5 .content {
+  font-family: "Montserrat";
+  font-style: normal;
+  margin: 0;
+  font-weight: 400;
+  color: #665f5f;
+  font-size: 24px;
+  line-height: 38px;
+  margin-bottom: 21px;
+  text-align: center;
+}
+.randox_wrapper .sectionr5 .randox6 {
+  width: 1195px;
+  height: 932.16px;
+  margin-top: 66px;
+  position: relative;
+}
+.randox_wrapper .sectionr5 .sectionr6 {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: center;
+  padding: 110px 0px 0px 0px;
+  align-items: center;
+  max-width: 1525px;
+  margin: 0 auto;
+}
+.randox_wrapper .sectionr5 .sectionr6 .image {
+  width: 1027px;
+  height: 583px;
+  position: relative;
+}
+.randox_wrapper .sectionr5 .sectionr6 .right {
+  max-width: 572px;
+}
+.randox_wrapper .sectionr5 .sectionr6 .ph {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 48px;
+  line-height: 50px;
+  padding-bottom: 24px;
+  color: #000000;
+}
+.randox_wrapper .sectionr5 .sectionr6 .content {
+  font-family: "Montserrat";
+  font-style: normal;
+  margin: 0;
+  font-weight: 400;
+  font-size: 24px;
+  margin-bottom: 21px;
+  color: #665f5f;
+  line-height: 38px;
+  text-align: initial;
+}
+.randox_wrapper .sectionr5 .sectionr7 {
+  margin: 110px 0px 70px 0px;
+}
+.randox_wrapper .sectionr5 .sectionr7 .randox8 {
+  width: 1532px;
+  height: 638.6px;
+  position: relative;
+}
+.randox_wrapper .sectionr5 .sectionr8 {
+  display: flex;
+  justify-content: center;
+  padding: 110px 0px 0px 0px;
+  align-items: flex-end;
+  max-width: 1525px;
+  margin: 0 auto;
+}
+.randox_wrapper .sectionr5 .sectionr8 .image {
+  width: 730px;
+  height: 522px;
+  position: relative;
+}
+.randox_wrapper .sectionr5 .sectionr8 .right {
+  max-width: 712px;
+}
+.randox_wrapper .sectionr5 .sectionr8 .ph {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 48px;
+  line-height: 50px;
+  padding-bottom: 24px;
+  color: #000000;
+}
+.randox_wrapper .sectionr5 .sectionr8 .content {
+  font-family: "Montserrat";
+  font-style: normal;
+  margin: 0;
+  font-weight: 400;
+  font-size: 24px;
+  margin-bottom: 21px;
+  color: #665f5f;
+  line-height: 38px;
+  text-align: initial;
 }/*# sourceMappingURL=Home.module.css.map */
